# poker-hand-evaluator

./: .clang-format  CMakeLists.txt  README.md  build.sh
src/: card.h  deck.h  hand.h  main.cpp
